# deviser

./: .gitignore  AUTHORS.txt  FUNDING.txt  Manifest.in  NEWS.txt  README.md  README_SPHINX.md  SUPPORT.md  codemeta.json  deviser.py  lo_class_children  pull_request_template.md  setup.py
.github/workflows/: test.yml
deviser/: .gitignore  __init__.py  __main__.py  deviser.py
deviser/base_files/: BaseCppFile.py  BaseFile.py  BaseInterfaceFile.py  BaseMatlabFile.py  BaseTexFile.py  BaseXMLFile.py
deviser/bindings_files/: BindingsFiles.py  DowncastExtensionFile.py  DowncastNamespaceFile.py  DowncastPackagesFile.py  DowncastPluginsFile.py  __init__.py
deviser/cmake_files/: BaseCMakeFiles.py  CMakeFiles.py  PackageFile.py  __init__.py
deviser/cmake_files/templates/code/: CMakeLists.txt
deviser/cmake_files/templates/src/: CMakeLists.txt
deviser/code_files/: CppCodeFile.py  CppExampleFile.py  CppHeaderFile.py  ExtensionCodeFile.py  ExtensionFiles.py  ExtensionHeaderFile.py  OtherLibraryFiles.py  ValidationFiles.py  ValidatorCodeFile.py
deviser/code_files/cpp_functions/: Constructors.py  ExtensionInitFunctions.py  GeneralFunctions.py  GenericAttributeFunctions.py  ProtectedFunctions.py  SetGetFunctions.py  __init__.py
deviser/code_files/templates/: CMakeLists.txt  ConstructorException.cpp  ConstructorException.h  Error.cpp  Error.h  ErrorLog.cpp  ErrorLog.h  ErrorTable.h  Namespaces.cpp  Namespaces.h  OperationReturnValues.cpp  Reader.cpp  Reader.h  SBase.cpp  SBase.h  TypeCodes.cpp  TypeCodes.h  Types.h  Visitor.cpp  Visitor.h  Writer.cpp  Writer.h  common.h  extern.h  lib-config.h  lib-namespace.h.cmake
deviser/parseXML/: ParseXML.py
deviser/pytest_files/: functions.py  test_functions.py
deviser/pytest_files/test_other_library/test-code/omex/cmake/src/omex/: CMakeLists.txt
deviser/pytest_files/test_other_library/test-code/sedml/cmake/src/sedml/: CMakeLists.txt
deviser/pytest_files/test_other_library/test-code/tsb/cmake/src/tsb/: CMakeLists.txt
deviser/spec_files/: TexMacrosFile.py  TexValidationRulesFile.py  __init__.py  valid_intro_para1.txt  valid_intro_para2.txt  valid_intro_para3.txt  valid_intro_para4.txt  valid_intro_para5.txt  valid_intro_para6.txt
deviser/util/: .gitignore  generateCode.py  generateExamples.py  generateMatlab.py  generateRNG.py  generateTest.py  generateXML.py  global_variables.py  query.py
deviser/validation/: RNGSchemaFiles.py  ValidationRulesForClass.py  ValidationRulesGeneral.py  ValidationXMLFiles.py  __init__.py
docs/: deviser.rng
docs/src/: .gitignore  DEVISER_MANUAL.docx  DEVISER_MANUAL_v1.0-edited.docx  DEVISER_MANUAL_v1.0.docx  Makefile  Tooltips for deviser.docx  make.bat  types.xml  ~$VISER_MANUAL_v1.0.docx
generator/: .gitignore  __init__.py  deviser.py
generator/base_files/: BaseCMakeFile.py  BaseCppFile.py  BaseFile.py  BaseInterfaceFile.py  BaseMatlabFile.py  BaseTemplateFile.py  BaseTexFile.py  BaseTxtFile.py  BaseXMLFile.py  __init__.py
generator/bindings_files/: BaseBindingsFiles.py  BindingsFiles.py  DowncastExtensionFile.py  DowncastNamespaceFile.py  DowncastPackagesFile.py  DowncastPluginsFile.py  NativeSwigFile.py  __init__.py
generator/cmake_files/: BaseCMakeFiles.py  CMakeFiles.py  CMakeListsFile.py  PackageFile.py  RegisterFile.py  __init__.py
generator/code_files/: .gitignore  BaseClassFiles.py  CppCodeFile.py  CppExampleFile.py  CppFiles.py  CppHeaderFile.py  CppTestFile.py  ExtensionCodeFile.py  ExtensionFiles.py  ExtensionHeaderFile.py  ValidationFiles.py  ValidatorCodeFile.py  ValidatorHeaderFile.py  __init__.py
generator/code_files/templates/: CMakeLists.txt  ConstructorException.h  Error.cpp  Error.h  ErrorLog.cpp  ErrorLog.h  ErrorTable.h  ListOf.cpp  ListOf.h  Namespaces.cpp  Namespaces.h  Reader.cpp  Reader.h  SBase.cpp  SBase.h  TypeCodes.cpp  TypeCodes.h  Types.h  Visitor.cpp  Visitor.h  Writer.cpp  Writer.h  common.h  lib-config-common.h.cmake  lib-namespace.h.cmake  lib-version.cpp  lib-version.h.cmake  operationReturnValues.cpp  operationReturnValues.h
generator/example_code_files/: CppExampleFile.py  __init__.py
generator/legacy/: .gitignore  __init__.py  createArchiveFile.py  createBindingsFiles.py  createCMakeFiles.py  createCommonFiles.py  createDirStruct.py  createExtensionFiles.py  createNewElementDictObj.py  createNewPackage.py  createPackageFromXml.py  createRegisterFiles.py  createSBMLFiles.py  createValidatorFiles.py  fileHeaders.py  generalFunctions.py  run.py  strFunctions.py  templateDocPluginCPP.txt  templateValidCPP.txt  templateValidHead.txt  writeBindingsFiles.py  writeCCode.py  writeCHeader.py  writeCode.py  writeDocPluginCode.py  writeDocPluginHeader.py  writeExtensionCode.py  writeExtensionHeader.py  writeHeader.py  writeListOfCode.py  writeListOfHeader.py  writePluginCode.py  writePluginHeader.py
generator/parseXML/: ParseXML.py  __init__.py  createPackageFromXml.py
generator/pytest_files/: README.md  test_functions.py
generator/spec_files/: TexBodySyntaxFile.py  TexMacrosFile.py  TexValidationRulesFile.py  __init__.py  body_ns_section.txt  body_ns_section2.txt
generator/tests/: README.txt  __init__.py  run-tests.py  test_functions.py
generator/util/: __init__.py  generateCode.py  generateExamples.py  generateLatex.py  generateRNG.py  generateTest.py  generateXML.py  global_variables.py  query.py  strFunctions.py
generator/validation/: RNGSchemaFiles.py  ValidationRulesForClass.py  ValidationRulesForPlugin.py  ValidationRulesGeneral.py  ValidationXMLFiles.py  __init__.py
misc-files/distrib/: .gitignore  create_dist_mac.sh  create_src_archive.sh  default_config.xml  test_archive.bat
misc-files/readme-for-SF/: README.md
samples/: distrib.xml  fbc.xml  fbc_v2.xml  foo_example_from_manual.xml  foo_rule_example_from_manual.xml  groups.xml  qual.xml  render.xml  sbgn.xml  sbgn_map.cpp.txt  sbgn_map.h.txt  sedml.xml  spatial.xml  spatial_param.h.txt  spatial_sampledfield.cpp.txt  spatial_sampledfield.h.txt
samples/testsbxml/: testsbxml.xml  tsb_sample.xml
sphinx-docs/: conf.py
temp/test_att/: apdx-validation.tex
(+1180 files in other folders)
