###############################################################################
#
# Description       : CMake build script for libSEDML
# 
###############################################################################

  
###############################################################################
#
# Build test files and add tests
# 
if(WITH_CHECK)

  add_subdirectory(test)

endif()

